--- a/src/app/shared/components/page-layout/page-layout.component.html
+++ b/src/app/shared/components/page-layout/page-layout.component.html
@@ -1,1 +1,5 @@
-<p>page-layout works!</p>
+<app-header></app-header>
+<div class="app-body">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
