--- a/src/app/features/home/components/movie-detail-page/movie-detail-page.component.scss
+++ b/src/app/features/home/components/movie-detail-page/movie-detail-page.component.scss
@@ -26,8 +26,13 @@
 }
 
 .movie-name {
-    font-size: 1.5rem;
-    font-weight: 700;
+    padding-right: 18px;
+    font-size: 16px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.25;
+    letter-spacing: 0.5;
 }
 
 .movie-description {
@@ -49,11 +54,6 @@
 
 .buttons-align {
     margin-top: 1.2rem;
-}
-
-.ul-data {
-    margin-bottom: .2rem;
-    margin-top: .2rem;
 }
 
 .align-value {
