--- a/src/app/shared/components/show-category-tree/show-category-tree.component.html
+++ b/src/app/shared/components/show-category-tree/show-category-tree.component.html
@@ -12,18 +12,18 @@
                         <a class="dropdown-item">{{child.name}}</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-item" *ngFor="let child1 of child.children">
-                                <div (click)="onCategorySelected(child1.name)">{{child1.name}}</div>
+                                <div (click)="onCategorySelected(category.name, child1.name)">{{child1.name}}</div>
                             </li>
                         </ul>
                     </li>
                     <div class="dropdown-item" *ngIf="!child.children">
-                        <div (click)="onCategorySelected(child.name)">{{child.name}}</div>
+                        <div (click)="onCategorySelected(category.name, child.name)">{{child.name}}</div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="dropdown-item">
-            <div (click)="onCategorySelected('')">All</div>
+            <div (click)="onCategorySelected('', '')">All</div>
         </div>
     </ul>
 </li>
