--- a/src/app/features/user/components/view-favorites-list/view-favorites-list.component.html
+++ b/src/app/features/user/components/view-favorites-list/view-favorites-list.component.html
@@ -22,4 +22,6 @@
 </div>
 <div class="movie-page-header" *ngIf="favorites.length === 0">
     <p>{{ 'VIEW_FAVOURITES.NO_FAVOTITE_MOVIES_FOUND' | translate }}</p>
+    <button pButton pRipple type="button" class="p-button-rounded p-button-secondary" routerLink="/">
+        {{ 'HOME.CONTINUE_BROWSING' | translate }}</button>
 </div>
