--- a/src/app/features/home/components/write-review/write-review.component.html
+++ b/src/app/features/home/components/write-review/write-review.component.html
@@ -1,5 +1,10 @@
-<p-button (click)="showModalDialog()" label="{{ 'WRITE_REVIEW.REVIEW_BUTTON' | translate }}">
+<div style="text-align: center;">
+    <p-button (click)="showModalDialog()" label="{{ 'WRITE_REVIEW.REVIEW_BUTTON' | translate }}"
+    styleClass="p-button-outlined p-button-rounded p-button-info"
+    [style]="{'margin-left': '.5em','margin-top': '1.0em'}">
 </p-button>
+</div>
+
 <p-dialog header="{{ 'WRITE_REVIEW.REVIEW_TEXT' | translate }}" [(visible)]="displayModal" [modal]="true"
     [style]="{width: '50vw'}" [baseZIndex]="10000" [draggable]="false" [resizable]="false">
     <form class="needs-validation" nonvalidate [formGroup]="reviewForm">
