--- a/src/app/features/user/components/view-favorites-list/view-favorites-list.component.html
+++ b/src/app/features/user/components/view-favorites-list/view-favorites-list.component.html
@@ -23,5 +23,5 @@
 <div class="movie-page-header" *ngIf="favorites.length === 0">
     <p>{{ 'VIEW_FAVOURITES.NO_FAVOTITE_MOVIES_FOUND' | translate }}</p>
     <button pButton pRipple type="button" class="p-button-rounded p-button-secondary" routerLink="/">
-        {{ 'HOME.CONTINUE_BROWSING' | translate }}</button>
+        {{ 'HEADER.CONTINUE_BROWSING' | translate }}</button>
 </div>
