--- a/src/app/features/user/components/view-favorites-list/view-favorites-list.component.scss
+++ b/src/app/features/user/components/view-favorites-list/view-favorites-list.component.scss
@@ -10,6 +10,10 @@
     color: brown;
 }
 
+.movie-page-header button {
+    text-align: center;
+}
+
 .movie-item {
     display: flex;
     align-items: center;
