--- a/src/app/features/user/components/view-watched-list/view-watched-list.component.html
+++ b/src/app/features/user/components/view-watched-list/view-watched-list.component.html
@@ -17,5 +17,5 @@
 <div class="cart-page-header" *ngIf = "watchedMovies.length === 0">
     <p>{{ 'VIEW_WATCHED.NO_WATCHED_MOVIES_FOUND' | translate }}</p>
     <button pButton pRipple type="button" class="p-button-rounded p-button-secondary" routerLink="/">
-        {{ 'HOME.CONTINUE_BROWSING' | translate }}</button>
+        {{ 'HEADER.CONTINUE_BROWSING' | translate }}</button>
 </div>
