--- a/src/app/features/home/components/movie-card/movie-card.component.scss
+++ b/src/app/features/home/components/movie-card/movie-card.component.scss
@@ -11,3 +11,13 @@ p {
 img {
     cursor: pointer;
 }
+
+.movie-name {
+    padding-right: 18px;
+    font-size: 16px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.25;
+    letter-spacing: 0.5;
+}
