--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -38,7 +38,8 @@
             translate }}</button>
           <button class="dropdown-item" [routerLink]="['/admin/add-prime-package']" *ngIf="isAdmin">{{
             'HEADER.ADD_PRIME_PACKAGE' | translate }}</button>
-          <button class="dropdown-item" [routerLink]="['/user/opt-prime']">{{ 'HEADER.TAKE_PRIME' | translate }}</button>
+          <button class="dropdown-item" [routerLink]="['/user/opt-prime']">{{ 'HEADER.TAKE_PRIME' | translate
+            }}</button>
         </div>
       </li>
     </ul>
